--- a/docs/.github/workflows/docs.yml
+++ b/docs/.github/workflows/docs.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - name: Requirements
-      run: brew install doxygen
-        && brew install sphinx-doc
+      run: apt-get install doxygen
+        && apt-get install sphinx-doc
         && pip3 install sphinx-rtd-theme
         && pip3 install breathe
         && pip3 install sphinx-sitemap
