--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,16 +42,12 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Sphinx Build
+    - name: Sphinx Pages
       # You may pin to the exact commit or the version.
-      # uses: ammaraskar/sphinx-action@8b4f60114d7fd1faeba1a712269168508d4750d2
-      uses: ammaraskar/sphinx-action@0.4
+      # uses: seanzhengw/sphinx-pages@70dd0557fc226cfcd41c617aec5e9ee4fce4afe2
+      uses: seanzhengw/sphinx-pages@v1
       with:
-        # The folder containing your sphinx docs.
-        docs-folder: # default is docs/
-        # The command used to build your documentation.
-        build-command: # optional, default is make html
-        # Run before the build command, you can use this to install system level dependencies, for example with "apt-get update -y && apt-get install -y perl"
-        pre-build-command: # optional
-
-      
+        # Token for the repo. Can be passed in using $\{{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # Auto create a README.md file at branch gh-pages root with repo/branch/commit links
+        create_readme: treu # optional
