--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,7 +14,10 @@ build:
     # rust: "1.70"
     # golang: "1.20"
 
-# Build documentation in the "docs/" directory with Sphinx
+  # Build documentation in the "docs/" directory with Sphinx
+  jobs:
+    pre_install:
+      - bash ./scripts/pre_install.sh
 sphinx:
   configuration: docs/conf.py
   # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
