--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,35 +42,9 @@ jobs:
       # Build your program with the given configuration
       run: 
           cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}   
-          &&    tar --dereference --hard-dereference --directory "$INPUT_PATH" -cvf "$RUNNER_TEMP/artifact.tar"  --exclude=.git  --exclude=.github  build/docs/sphinx 
-      
-    
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ${{ inputs.name }}
-        path: ${{ runner.temp }}/artifact.tar
-        retention-days: ${{ inputs.retention-days }}
-        if-no-files-found: error
-
-  # Deploy job
-  deploy:
-    # Add a dependency to the build job
-    needs: build
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
+          && git checkout gh-pages
+          && touch ${{github.workspace}}/.nojekyll
+          && cp -rf ${{github.workspace}}/build/docs/* ${{github.workspace}}/
+          && git add --all .
+          && git commit -m "update the webpages"
+          && git push origin gh-pages
