--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -40,9 +40,10 @@ jobs:
         git fetch 
         && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}  -DCMAKE_CXX_FLAGS=" -D_GLIBCXX_USE_TBB_PAR_BACKEND=0 -std=c++20 -qopenmp  -qmkl -fp-model precise " -DCMAKE_CXX_COMPILER=/opt/intel/oneapi/compiler/latest/linux/bin/icpx  .
 
-    - name: Build
+    - name: Setup git
       # Build your program with the given configuration
       uses: fregante/setup-git-user@v2 # set git 
+    - name: Build
       # build 
       run: 
         git checkout gh-pages
