--- a/cmake.yml
+++ b/cmake.yml
@@ -40,17 +40,17 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: 
-        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}  -DCMAKE_CXX_FLAGS=" -D_GLIBCXX_USE_TBB_PAR_BACKEND=0 -std=c++20 -qopenmp  -qmkl -fp-model precise " -DCMAKE_CXX_COMPILER=/opt/intel/oneapi/compiler/latest/linux/bin/icpx  .
+        git fetch 
+        && git checkout gh-pages
+        && git rebase -Xtheirs master 
+        && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}  -DCMAKE_CXX_FLAGS=" -D_GLIBCXX_USE_TBB_PAR_BACKEND=0 -std=c++20 -qopenmp  -qmkl -fp-model precise " -DCMAKE_CXX_COMPILER=/opt/intel/oneapi/compiler/latest/linux/bin/icpx  .
     - name: Build
       # build 
       run: 
-        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        && touch ${{github.workspace}}/build/docs/sphinx/.nojekyll
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
-      with:
-          # Upload entire repository
-          path: './build/docs/sphinx'
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+        touch .nojekyll
+        && cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        && touch ${{github.workspace}}/.nojekyll
+        && cp -rf ${{github.workspace}}/build/docs/* ${{github.workspace}}/
+        && git add --all .
+        && git commit -m "update the webpages"
+        && git push origin gh-pages --force 
