--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,14 +1,29 @@
-name: CMake
+name: Github Pages
 
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: master
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
