--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,7 +58,8 @@ jobs:
     - name: Build
       # build 
       run: 
-        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        source  /opt/intel/oneapi/setvars.sh 
+        && cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -DCMAKE_CXX_FLAGS=" -D_GLIBCXX_USE_TBB_PAR_BACKEND=0 -std=c++20 -qopenmp  -qmkl -fp-model precise " -DCMAKE_CXX_COMPILER=icpx  
         && touch ${{github.workspace}}/build/docs/sphinx/.nojekyll
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
