--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -66,7 +66,8 @@ jobs:
       uses: actions/upload-pages-artifact@v2
       with:
           # Upload entire repository
-          path: './build/docs/sphinx'
+          # path: './build/docs/sphinx'
+          path: '${{github.workspace}}/build/docs/sphinx'
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
