--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(THREADS_PREFER_PTHREAD_FLAG ON) # This is just for us, we do prefer pthreads
 # Create Documentation 
 add_subdirectory("nrgcore")
 add_subdirectory("docs")
+add_subdirectory("examples/rgflowSIAM")
 #add_subdirectory("examples/entropySIAM")
 # add all sub directories .. 
 # file(GLOB V_GLOB LIST_DIRECTORIES true "examples/*")
